# kv-lossless-11x

./: .gitignore  ARCHIVE_NOTICE.md  CITATION.cff  Cargo.toml  README.md  REPRODUCE.md
docs/: STATE_JSON_SCHEMA.md
fib-quant/: README.md
fib-quant/benchmarks/: ENCODE_BATCH_MICROBENCH_2026-06-01.md
fib-quant/examples/: encode_batch_microbench.rs
fib-quant/tests/: decode_batch_fast_parity.rs
gpu-backend/: README.md
gpu-backend/src/: lib.rs
poly-kv/: Cargo.toml  README.md
poly-kv/examples/: poly_kv_dynamic_cache_roundtrip.rs  poly_kv_fast_roundtrip.rs  poly_kv_gpu_bench.rs
poly-kv/scripts/: assert_no_boundary_drift.py  assert_python_sidecar_layout.py  assert_realized_accounting.py  assert_receipt_integrity.py  assert_source_package_hygiene.py  bench_boundary.py  bench_rust_synthetic.py  bootstrap_poly_kv_workspace.sh  build_handoff_package.sh  build_poly_kv_corpus.py  check_public_claims.py  compare_receipts.py  ppl_multi_agent.py  ppl_validate.py  preflight.sh  preflight_next_pass.sh  run_next_validation.sh  test_zpy_hygiene_regression.py  validate_final_state.py  validate_schemas.py
poly-kv/src/: codec.rs  error.rs  lib.rs  manifest.rs  policy.rs  pool.rs  receipt.rs  shape.rs  shell.rs
quant-codec-core/: CHANGELOG.md  README.md
